--- a/templates/base.html
+++ b/templates/base.html
@@ -318,8 +318,8 @@
                   <a href="#" class="sideMenuNav2Link">점호관리</a>
                   <ul class="submenu">
                     <li>
-                      <a href="" class="sideMenuNav3Link">
-                        <div class="sideMenuNav3Menu">점호관리?</div>
+                      <a href="/rollcall/management" class="sideMenuNav3Link">
+                        <div class="sideMenuNav3Menu">점호관리</div>
                       </a>
                     </li>
                     <li>
@@ -506,8 +506,8 @@
                   <a href="#" class="sideMenuNav2Link">급여관리</a>
                   <ul class="submenu">
                     <li>
-                      <a href="" class="sideMenuNav3Link">
-                        <div class="sideMenuNav3Menu">급여 분포도2?</div>
+                      <a href="{% url 'salary:distribution' %}" class="sideMenuNav3Link">
+                        <div class="sideMenuNav3Menu">급여 분포도2</div>
                       </a>
                     </li>
                     <li>
